# qt6-inventory-app

./: CMakeLists.txt  README.md
Headers/: Inventory.h
Sources/: Inventory.cpp
